<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <EditText
        android:id="@+id/first_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="type your number"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/second_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="type your number"
        android:textAlignment="center"
        />


    <TextView
        android:id="@+id/txt_sumView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="visualize!"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="+"/>
        <Button
            android:id="@+id/btn_subtract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="-"/>

        <Button
            android:id="@+id/btn_multiple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="*"/>
        <Button
            android:id="@+id/btn_divide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="/"/>
    </LinearLayout>

</LinearLayout>